--- a/.github/workflows/polls_and_gcb.yml
+++ b/.github/workflows/polls_and_gcb.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: '3.10'
       - run: pip3 install -r requirements.txt
-      - run: python fte.py
+      - run: python task.py
         env:
           EMAIL_SENDER: ${{secrets.EMAIL_SENDER}}
           EMAIL_PASSWORD: ${{secrets.EMAIL_PASSWORD}}
