--- a/.github/workflows/polls_and_gcb.yml
+++ b/.github/workflows/polls_and_gcb.yml
@@ -3,7 +3,7 @@ name: FTE and Polls Notifier
 on:
   workflow_dispatch:
   schedule:
-    - cron: '13 */2 * * *'
+    - cron: '13 * * * *'
 
 jobs:
   scheduled:
