--- a/.github/workflows/refresh_and_notify.yml
+++ b/.github/workflows/refresh_and_notify.yml
@@ -19,6 +19,7 @@ jobs:
           EMAIL_SENDER: ${{secrets.EMAIL_SENDER}}
           EMAIL_PASSWORD: ${{secrets.EMAIL_PASSWORD}}
           EMAIL_RECIPIENT: ${{secrets.EMAIL_RECIPIENT}}
+          TEXT_RECIPIENT: ${{secrets.TEXT_RECIPIENT}}
       - name: Commit and push if changed
         run: |-
           git config user.name "Actions"
