Make config.ini to lowercase

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,4 @@
 [config]
-GCB_NOTIFICATION_THRESHOLD = 0.01
-;POLLS_PATTERN = '#MI|Michigan|#..(Sen|SEN|Gov|GOV) General'
+gcb_notification_threshold = 0.01
+;polls_pattern = '#MI|Michigan|#..(Sen|SEN|Gov|GOV) General'
+fte_forecast = _classic
