--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,5 @@
 ;polls_pattern = '#MI|Michigan|#..(Sen|SEN|Gov|GOV) General'
 gcb_notification_threshold = 0.01
 fte_forecast = _classic
+fte_senate = true
+fte_house = true
