--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,12 @@
-[config]
-;polls_pattern = '#MI|Michigan|#..(Sen|SEN|Gov|GOV) General'
-gcb_notification_threshold = 0.01
-fte_forecast = _classic
-fte_senate = true
-fte_house = true
+[gcb]
+notify = true
+threshold = 0.01
+
+[forecasts]
+notify_senate = true
+notify_house = true
+expression = _classic
+
+[polls]
+notify = false
+pattern = '#MI|Michigan|#..(Sen|SEN|Gov|GOV) General'
