--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 notify = true
 threshold = 0.01
 
-[forecasts]
+[forecasts_national]
 notify_senate = true
 notify_house = true
 expression = _classic
