Add seat-level forecasts

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,11 @@ notify_senate = true
 notify_house = true
 expression = _classic
 
+[forecasts_seats]
+senate = PA WI AZ
+house = MI-3 MI-10 MI-11
+expression = _classic
+
 [polls]
 notify = false
 pattern = '#MI|Michigan|#..(Sen|SEN|Gov|GOV) General'
