Rename config key

--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@ notify = true
 threshold = 0.01
 
 [forecasts_national]
-notify_senate = true
-notify_house = true
+senate = true
+house = true
 expression = _classic
 
 [forecasts_seats]
