--- a/config.ini
+++ b/config.ini
@@ -8,8 +8,9 @@ house = true
 expression = _classic
 
 [forecasts_seats]
-senate = PA WI AZ
+senate = PA WI AZ GA
 house = MI-3 MI-10 MI-11
+governor = MI PA WI GA
 expression = _classic
 
 [polls]
