--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ house = true
 expression = _classic
 
 [forecasts_seats]
-senate = PA WI AZ GA
+senate = PA WI AZ GA NC
 house = MI-3 MI-10 MI-11
 governor = MI PA WI MN GA AZ FL
 expression = _classic
