--- a/config.ini
+++ b/config.ini
@@ -8,9 +8,9 @@ house = true
 expression = _classic
 
 [forecasts_seats]
-senate = PA WI AZ GA NC
+senate = PA WI AZ GA NC NH NV OH CO
 house = MI-3 MI-10 MI-11
-governor = MI PA WI MN GA AZ FL
+governor = MI PA WI MN
 expression = _classic
 
 [polls]
