--- a/config.ini
+++ b/config.ini
@@ -14,5 +14,5 @@ governor = MI PA WI MN
 expression = _classic
 
 [polls]
-notify = false
-pattern = '#MI|Michigan|#..(Sen|SEN|Gov|GOV) General'
+notify = true
+pattern = 'Michigan|#MI(Gov|GOV)'
