--- a/config.ini
+++ b/config.ini
@@ -15,4 +15,4 @@ expression = _classic
 
 [polls]
 twitter_username = PollTrackerUSA
-pattern = 'Michigan|#MI(Gov|GOV)'
+pattern = Michigan|#MI(Gov|GOV)
