--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ expression = _classic
 
 [forecasts_seats]
 house = MI-3 MI-10 MI-11
-governor = MI PA WI MN KS
+governor = MI PA WI MN GA KS FL
 expression = _classic
 
 [polls]
