--- a/config.ini
+++ b/config.ini
@@ -13,6 +13,6 @@ house = MI-3 MI-10 MI-11
 governor = MI PA WI MN GA KS FL
 expression = _classic
 
-[polls]
-twitter_username = PollTrackerUSA
+[twitter_polls]
+username = PollTrackerUSA
 pattern = Michigan|#MI(Gov|GOV)
