--- a/config.ini
+++ b/config.ini
@@ -10,7 +10,7 @@ expression = _classic
 [forecasts_seats]
 ;senate = PA WI AZ GA NH NV OH
 house = MI-3 MI-10 MI-11
-governor = MI PA WI MN GA KS FL
+governor = MI PA WI MN
 expression = _classic
 
 [twitter_polls]
