forecasts_national- add threshold

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ notify_with_matching_polls = false
 senate = true
 house = true
 expression = _classic
+threshold = 2
 
 [forecasts_seats]
 ;senate = PA WI AZ GA NH NV OH
