--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,7 @@ threshold = 2
 ;house = MI-3 MI-10 MI-11
 ;governor = MI PA WI MN
 expression = _classic
+threshold = 2
 
 [twitter_polls]
 username = PollTrackerUSA
