--- a/config.ini
+++ b/config.ini
@@ -10,9 +10,9 @@ expression = _classic
 threshold = 2
 
 [forecasts_seats]
-;senate = PA WI AZ GA NH NV OH
-;house = MI-3 MI-10 MI-11
-;governor = MI PA WI MN
+senate = PA WI AZ GA NH NV OH
+house = MI-3 MI-10 MI-11
+governor = MI PA WI MN
 expression = _classic
 threshold = 2
 
