--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,8 @@ threshold = 0.01
 notify_with_matching_polls = false
 
 [forecasts_national]
-senate = true
-house = true
+notify_senate = true
+notify_house = true
 expression = _classic
 threshold = 2
 
