Revert "Update config.ini"
This reverts commit 4e3e6453b19ff9bf9bc6b4ca33779cc0c02d47af.

--- a/config.ini
+++ b/config.ini
@@ -17,5 +17,5 @@ expression = _classic
 threshold = 2
 
 [twitter_polls]
-;username = PollTrackerUSA
+username = PollTrackerUSA
 pattern = Michigan|#MI
