--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [gcb]
 notify = true
 threshold = 0.01
-notify_with_matching_polls = false
+notify_with_matching_polls = true
 
 [forecasts_national]
 notify_senate = true
