Revert "Change config item names"
This reverts commit 7006265fcfc3d1d1e9129f012b77ac97ecf112af.

--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,8 @@ threshold = 0.01
 notify_with_matching_polls = true
 
 [forecasts_national]
-notify_senate = true
-notify_house = true
+senate = true
+house = true
 expression = _classic
 threshold = 2
 
