--- a/.github/workflows/refresh_and_notify.yml
+++ b/.github/workflows/refresh_and_notify.yml
@@ -27,7 +27,7 @@ jobs:
         run: |-
           git config user.name "Actions"
           git config user.email "actions@users.noreply.github.com"
-          git add -A
+          git add ./data/latest.json ./data/generic_ballot_polls.csv
           timestamp=$(date -u)
           git commit -m "Latest data: ${timestamp}" || exit 0
           git push
