--- a/config.ini
+++ b/config.ini
@@ -17,5 +17,6 @@ expression = _classic
 threshold = 2
 
 [twitter_polls]
+rss_base_url = https://nitter.pussthecat.org
 username = PollTrackerUSA
 pattern = Michigan|#MI
