--- a/config.ini
+++ b/config.ini
@@ -17,6 +17,6 @@ expression = _classic
 threshold = 2
 
 [twitter_polls]
-rss_base_url = https://nitter.pussthecat.org
+rss_base_url = https://nitter.net
 username = PollTrackerUSA
 pattern = Michigan|#MI
