--- a/.github/workflows/refresh_and_notify.yml
+++ b/.github/workflows/refresh_and_notify.yml
@@ -29,5 +29,5 @@ jobs:
           git config user.email "actions@users.noreply.github.com"
           git add ./data/latest.json ./data/generic_ballot_polls.csv
           timestamp=$(date -u)
-          git commit -m "Latest data: ${timestamp}" || exit 0
+          git commit -m "Latest: ${timestamp}" || exit 0
           git push
