--- a/.github/workflows/compare_forecast_expressions.yml
+++ b/.github/workflows/compare_forecast_expressions.yml
@@ -2,8 +2,8 @@ name: Compare Forecast Expressions
 
 on:
   workflow_dispatch:
-#  schedule:
-#    - cron: '40 0,12 * * *'
+  schedule:
+    - cron: '40 0,12 * * *'
 
 jobs:
   scheduled:
