Change config keys

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,9 @@
-[gcb]
+[gcb_average]
 notify = true
 threshold = 0.01
-notify_with_matching_polls = true
+
+[gcb_polls]
+notify = true
 
 [forecasts_national]
 senate = true
