--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,7 @@ governor = MI PA WI MN
 expression = _classic
 threshold = 2
 
-[twitter_polls]
+[twitter]
 rss_base_url = https://nitter.net
 username = PollTrackerUSA
 pattern = Michigan|#MI
