Allow multiple twitters

--- a/config.ini
+++ b/config.ini
@@ -20,5 +20,5 @@ threshold = 2
 
 [twitter]
 rss_base_url = https://nitter.net
-username = PollTrackerUSA
+usernames = PollTrackerUSA MediumBuying
 pattern = Michigan|#MI
