--- a/config.ini
+++ b/config.ini
@@ -20,5 +20,5 @@ threshold = 2
 
 [twitter]
 rss_base_url = https://nitter.net
-usernames = PollTrackerUSA MediumBuying
+usernames = PollTrackerUSA Politics_Polls MediumBuying
 pattern = Michigan|#MI
