--- a/config.ini
+++ b/config.ini
@@ -12,9 +12,9 @@ expression = _classic
 threshold = 2
 
 [forecasts_seats]
-senate = PA WI AZ GA NH NV OH
+;senate = PA WI AZ GA NH NV OH
 house = MI-3 MI-10 MI-11
-governor = MI PA WI MN
+governor = MI
 expression = _classic
 threshold = 2
 
