Add special to config.ini

--- a/config.ini
+++ b/config.ini
@@ -22,3 +22,6 @@ threshold = 2
 rss_base_url = https://nitter.net
 usernames = PollTrackerUSA MediumBuying
 pattern = Michigan|#MI
+
+[special]
+notify = true
