Add func _get_twitter_feeds

--- a/config.ini
+++ b/config.ini
@@ -19,6 +19,7 @@ expression = _classic
 threshold = 2
 
 [twitter]
+notify = false
 rss_base_url = https://nitter.net
 usernames = PollTrackerUSA MediumBuying
 pattern = Michigan|#MI
