Add twitter username

--- a/config.ini
+++ b/config.ini
@@ -21,7 +21,7 @@ threshold = 2
 [twitter]
 notify = false
 rss_base_url = https://nitter.net
-usernames = PollTrackerUSA MediumBuying
+usernames = PollTrackerUSA Politics_Polls MediumBuying
 pattern = Michigan|#MI
 
 [special]
