--- a/.github/workflows/daily_jobs.yml
+++ b/.github/workflows/daily_jobs.yml
@@ -1,9 +1,9 @@
-name: Compare Forecast Expressions
+name: Daily Jobs
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '40 20 * * *'
+    - cron: '40 0 * * *'
 
 jobs:
   scheduled:
@@ -15,11 +15,12 @@ jobs:
           python-version: '3.10'
       - run: pip3 install -r requirements.txt
       - run: python compare_forecast_expressions.py
+      - run: python gcb_polls_movement.py
       - name: Commit and push if changed
         run: |-
           git config user.name "Actions"
           git config user.email "actions@users.noreply.github.com"
-          git add ./forecast_expression_comparisons/
+          git add ./forecast_expression_comparisons/ ./gcb_polls_movement
           timestamp=$(date -u)
           git commit -m "Latest (Compare Forecast Expressions): ${timestamp}" || exit 0
           git push
