Resume twitter notifications

--- a/config.ini
+++ b/config.ini
@@ -19,7 +19,7 @@ expression = _classic
 threshold = 2
 
 [twitter]
-notify = false
+notify = true
 rss_base_url = https://nitter.net
-usernames = PollTrackerUSA Politics_Polls MediumBuying
+usernames = PollTrackerUSA
 pattern = Michigan|#MI
