--- a/config.ini
+++ b/config.ini
@@ -22,7 +22,7 @@ expression = _classic
 threshold = 2
 
 [twitter]
-notify = true
+notify = false
 rss_base_url = https://nitter.net
 usernames = PollTrackerUSA
 pattern = Michigan|#MI
