Change model type

--- a/config.ini
+++ b/config.ini
@@ -11,14 +11,14 @@ use = true
 [forecasts_national]
 senate = true
 house = true
-expression = _classic
+expression = _deluxe
 threshold = 3
 
 [forecasts_seats]
 ;senate = PA WI AZ GA NH NV OH
 house = MI-3 MI-10 MI-11
 governor = MI
-expression = _classic
+expression = _deluxe
 threshold = 2
 
 [twitter]
