--- a/.github/workflows/refresh_and_notify.yml
+++ b/.github/workflows/refresh_and_notify.yml
@@ -3,7 +3,8 @@ name: Refresh and Notify
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '*/30 * 15-31 10,11 *'
+    - cron: '*/30 * 1-7 11 *'
 
 jobs:
   scheduled:
