Clean up notifications

--- a/config.ini
+++ b/config.ini
@@ -16,10 +16,10 @@ threshold = 5
 
 [forecasts_seats]
 ;senate = PA WI AZ GA NH NV OH
-house = MI-3 MI-10 MI-11
+;house = MI-3 MI-10 MI-11
 governor = MI
 expression = _deluxe
-threshold = 2
+threshold = 1
 
 [twitter]
 notify = false
