--- a/config.ini
+++ b/config.ini
@@ -22,7 +22,7 @@ expression = _deluxe
 threshold = 1
 
 [twitter]
-notify = false
+notify = true
 rss_base_url = https://nitter.net
 usernames = PollTrackerUSA
 pattern = Michigan|#MI
