Revert "Enable twitter notifications"
This reverts commit 0025ca24141d520651c3ef37e5c5379c93736dd5.

--- a/config.ini
+++ b/config.ini
@@ -22,7 +22,7 @@ expression = _deluxe
 threshold = 1
 
 [twitter]
-notify = true
+notify = false
 rss_base_url = https://nitter.net
 usernames = PollTrackerUSA
 pattern = Michigan|#MI
