Turn off notifications

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [gcb_average]
-notify = true
+notify = false
 threshold = 0.03
 
 [gcb_polls]
@@ -9,15 +9,15 @@ notify = false
 use = true
 
 [forecasts_national]
-senate = true
-house = true
+senate = false
+house = false
 expression = _deluxe
 threshold = 5
 
 [forecasts_seats]
 ;senate = PA WI AZ GA NH NV OH
 ;house = MI-3 MI-10 MI-11
-governor = MI
+;governor = MI
 expression = _deluxe
 threshold = 2
 
